2.90 full crash with not output error after duplicating an object several times #77396

Closed
opened 2020-06-04 22:17:20 +02:00 by Juan Gea · 19 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: b94ab93dfb
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes after doing several copies of an object, I suspect it's related to undo, and not sure it is limited to duplication or instancing

Exact steps for others to reproduce the error
Follow the video, but the steps are these:

1.- Open Blender 2.90 alpha
2.- Start duplicating the default cube or whatever object
3.- After 30 copies or so Blender will crash to desktop with no obvious error as can be seen in the video.

2prxXEXJCg.mp4

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: `b94ab93dfb` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes after doing several copies of an object, I suspect it's related to undo, and not sure it is limited to duplication or instancing **Exact steps for others to reproduce the error** Follow the video, but the steps are these: 1.- Open Blender 2.90 alpha 2.- Start duplicating the default cube or whatever object 3.- After 30 copies or so Blender will crash to desktop with no obvious error as can be seen in the video. [2prxXEXJCg.mp4](https://archive.blender.org/developer/F8577526/2prxXEXJCg.mp4)
Author

Added subscriber: @juang3d

Added subscriber: @juang3d

#77338 was marked as duplicate of this issue

#77338 was marked as duplicate of this issue
Member

Added subscribers: @mont29, @HooglyBoogly

Added subscribers: @mont29, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

The number of objects seems to correlate to the number of undo steps, but not directly. With undo steps set to 2 it crashed on the 8th object for me.

I don't see the crash with "Global Undo" turned off.

libc.so.6!raise (Unknown Source:0)
libc.so.6!abort (Unknown Source:0)
MemorY_ErroR(const char * block, const char * error) (/home/hans/Documents/Blender-Git/blender/intern/guardedalloc/intern/mallocn_guarded_impl.c:999)
MEM_guarded_freeN(void * vmemh) (/home/hans/Documents/Blender-Git/blender/intern/guardedalloc/intern/mallocn_guarded_impl.c:874)
BLO_memfile_free(MemFile * memfile) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/undofile.c:64)
BLO_memfile_merge(MemFile * first, MemFile * second) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/undofile.c:94)
memfile_undosys_step_free(UndoStep * us_p) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/memfile_undo.c:264)
undosys_step_free_and_unlink(UndoStack * ustack, UndoStep * us) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:224)
undosys_stack_clear_all_first(UndoStack * ustack, UndoStep * us, UndoStep * us_exclude) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:332)
BKE_undosys_stack_limit_steps_and_memory(UndoStack * ustack, int steps, size_t memory_limit) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:447)
ED_undo_push(bContext * C, const char * str) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:104)
ED_undo_push_op(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:301)
wm_operator_finished(bContext * C, wmOperator * op, const _Bool repeat, const _Bool store) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:925)
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2049)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2806)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2854)
wm_event_do_handlers(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3283)
WM_main(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm.c:475)
main(int argc, const char ** argv) (/home/hans/Documents/Blender-Git/blender/source/creator/creator.c:528)
The number of objects seems to correlate to the number of undo steps, but not directly. With undo steps set to 2 it crashed on the 8th object for me. I don't see the crash with "Global Undo" turned off. ```lines=5 libc.so.6!raise (Unknown Source:0) libc.so.6!abort (Unknown Source:0) MemorY_ErroR(const char * block, const char * error) (/home/hans/Documents/Blender-Git/blender/intern/guardedalloc/intern/mallocn_guarded_impl.c:999) MEM_guarded_freeN(void * vmemh) (/home/hans/Documents/Blender-Git/blender/intern/guardedalloc/intern/mallocn_guarded_impl.c:874) BLO_memfile_free(MemFile * memfile) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/undofile.c:64) BLO_memfile_merge(MemFile * first, MemFile * second) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/undofile.c:94) memfile_undosys_step_free(UndoStep * us_p) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/memfile_undo.c:264) undosys_step_free_and_unlink(UndoStack * ustack, UndoStep * us) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:224) undosys_stack_clear_all_first(UndoStack * ustack, UndoStep * us, UndoStep * us_exclude) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:332) BKE_undosys_stack_limit_steps_and_memory(UndoStack * ustack, int steps, size_t memory_limit) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:447) ED_undo_push(bContext * C, const char * str) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:104) ED_undo_push_op(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:301) wm_operator_finished(bContext * C, wmOperator * op, const _Bool repeat, const _Bool store) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:925) wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2049) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2806) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2854) wm_event_do_handlers(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3283) WM_main(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm.c:475) main(int argc, const char ** argv) (/home/hans/Documents/Blender-Git/blender/source/creator/creator.c:528) ```

Added subscriber: @rjg

Added subscriber: @rjg

This appears to be caused by cda1540858

This appears to be caused by cda1540858

Added subscriber: @natecraddock

Added subscriber: @natecraddock

I experienced this as well, and it is not isolated to only duplication. For example, I deleted the default cube then selected objects from the outliner repeatedly until Blender crashed.

I experienced this as well, and it is not isolated to only duplication. For example, I deleted the default cube then selected objects from the outliner repeatedly until Blender crashed.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I'm also running into this often when selecting the same object multiple times in a simple scene.

I'm also running into this often when selecting the same object multiple times in a simple scene.

Added subscriber: @zeauro

Added subscriber: @zeauro

I can reproduce on linux.

Nobody did it. So, I attach crash.txt file.
blender.crash.txt

I can reproduce on linux. Nobody did it. So, I attach crash.txt file. [blender.crash.txt](https://archive.blender.org/developer/F8578547/blender.crash.txt)
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Bastien Montagne self-assigned this 2020-06-05 12:12:21 +02:00

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

This also looks fairly similar to what @JulienKaspar was reporting yesterday in the studio chat...

This also looks fairly similar to what @JulienKaspar was reporting yesterday in the studio chat...

This issue was referenced by 67b17684e6

This issue was referenced by 67b17684e699edc3bbd303420c86e31b6af7007f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @3di, @mano-wii, @torrent-1, @EAW

Added subscribers: @3di, @mano-wii, @torrent-1, @EAW
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77396
No description provided.